[package]
name = "rust-dmr-mal"
version = "0.1.0"
authors = ["David Robertson <david.m.robertson1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linefeed = "0.6.0"
dirs = "2.0.2"

[[bin]]
name = "step0_repl"