[package]
name = "rust-dmr-mal"
version = "0.1.0"
authors = ["David Robertson <david.m.robertson1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linefeed = "0.6.0"
dirs = "2.0.2"
regex = "1.3.7"
lazy_static = "1.4.0"
itertools = "0.9.0"
log = { version= "0.4.8", features=["std", "release_max_level_off"] }
pretty_env_logger = "0.4"
ansi_term = "0.12.1"
atty = "0.2.14"
bimap = "0.4.0"
paste = "0.1.16"
derive_more = "0.99.9"